# testprog

./: Cargo.toml  README.md
src/: main.rs
tmp/data/source=1/year=2021/: 2021-01-01.parquet
